--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="'X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RENT-A-RIDE</title>
+    <title>WheelsonRent</title>
     <!--Link to CSS-->
     <link rel="stylesheet" href="style.css">
     <!--Box Icons-->
@@ -272,7 +272,7 @@
     </div>
     </section>
     <div class="copyright">
-        <p>&#169;Rent-A-Ride. All Right Reserved</p>
+        <p>&#169;WheelsonRent. All Right Reserved</p>
         <div class="social">
             <a href="#" class=""><i class='bx bxl-facebook' ></i></a>
             <a href="#" class=""><i class='bx bxl-twitter' ></i></a>
