--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
     </div>
     </section>
     <div class="copyright">
-        <p>&#169;WheelsonRent. All Right Reserved</p>
+        <p>&#169;Vishakha. All Right Reserved</p>
         <div class="social">
             <a href="#" class=""><i class='bx bxl-facebook' ></i></a>
             <a href="#" class=""><i class='bx bxl-twitter' ></i></a>
